# kaneonexus-website

./: .env.example  .gitignore  Console  README.md  contact.html  council.html  demos-index-1.html  demos-index.html  demos.html  deploy-nexus-demos.sh  deploy-to-ionos.sh  index.html  index.html.backup  kaneonexus-backend  landing.html  narrative-animate.js  narrative-animator.html  netlify.toml  nexus-console.html  nexus-hero.html  nexus-identity.js  nexus-invoice.html  nexus-memoria.html  nexus-metals-ping.html  nexus-people-search.html  nexus-phone.html  nexus-ping.html  nexus-property-tax.html  nexus-safe-contact.html  nexus-safeguard.html  nexus-sovereign-core.html  safeguard-demo.html  validation-key.txt  vercel.json
.github/workflows/: kaneonexus-website-build.yaml  kaneonexus-website-orchestration.yaml
Demos/netlify/functions/: nexus-chat.js
api/: nexus-chat.js
demos/: ai-companion  cerberus-protocol.html  demos-hub.html  frequent-see.html  guardian-dashboard.html  guardian-protocol.html  guardian-shield.html  index.html  luna-tic.html  lunar-viz.html  maintenance-hub.html  nexus-core.html  opensesame.html  safeguard.html
demos/demos/: guardian-dashboard.html  maintenance-hub.html
eiai/: eiai.html  validation-key.txt
family/: index.html
kaneonexus.com/: validation-key.txt
netlify/functions/: nexus-chat.js  nexus-provision.js  nexus-sms-inbound.js  nexus-sms.js
particleflow-fixes/: CMakeLists.txt  GearView.java  MainActivity.java  ParticleFlowGL-upstream-fix.patch  ParticlesRenderer.java  ParticlesRendererGL.java  ParticlesRendererVK.java  ParticlesSurfaceView.java  ParticlesSurfaceViewVK.java  SettingsView.java  particle_frag.frag  particle_init.comp  particle_update.comp  particle_vert.vert  strings.xml
particleflow-fixes/vulkan/: ParticleFlowVK.cpp  ParticleFlowVK.h  jni_bridge.cpp
ping-test/: analyzer.html  index.html  netlify.toml
(+1 files in other folders)
